# SyrenSensor

./: .gitignore  ChannelSounding.code-workspace
bt_cs_ncp/: .projectlinkstore  app.c  bt_cs_ncp.slcp  bt_cs_ncp.slpb  bt_cs_ncp.slps  cs_acp.h  extended_result.c  extended_result.h  ncp_user_cmd.c  readme.md  vscode.conf
bt_cs_ncp/cmake_gcc/: CMakeLists.txt  CMakePresets.json  bt_cs_ncp.cmake  toolchain.cmake
bt_cs_ncp/config/: cs_ras_server_config.h  cs_reflector_config.h  sl_bluetooth_config.h  sl_board_control_config.h  sl_clock_manager_oscillator_config.h  sl_rail_util_aox_config.h  sl_uartdrv_usart_vcom_config.h
bt_cs_soc_initiator/: .projectlinkstore  app.c  bt_cs_soc_initiator.slcp  vscode.conf
bt_cs_soc_initiator/autogen/: ble_peer_manager_common.c  gatt_db.h  linkerfile.ld  sl_bluetooth.c  sl_component_catalog.h  sl_event_handler.c
bt_cs_soc_initiator/autogen/.slc_state/: .crc_config.crc
bt_cs_soc_initiator/autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
bt_cs_soc_initiator/cmake_gcc/: CMakeLists.txt  CMakePresets.json  bt_cs_soc_initiator.cmake
bt_cs_soc_initiator/config/: cs_initiator_config.h  sl_btctrl_anchor_selection_config.h  sl_btctrl_config.h  sl_clock_manager_tree_config.h  sl_simple_button_btn0_config.h  sl_simple_button_btn1_config.h  sl_simple_led_led0_config.h
bt_cs_soc_reflector/: .projectlinkstore  app.c  app.h  bt_cs_soc_reflector.slcp  readme.md  vscode.conf
bt_cs_soc_reflector/autogen/: ble_peer_manager_common.c  gatt_db.c  gatt_db.h  linkerfile.ld  sl_bluetooth.c  sl_component_catalog.h  sl_event_handler.c  sl_power_manager_handler.c
bt_cs_soc_reflector/autogen/.slc_state/: .crc_config.crc
bt_cs_soc_reflector/autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
bt_cs_soc_reflector/cmake_gcc/: CMakeLists.txt  CMakePresets.json  bt_cs_soc_reflector.cmake
bt_cs_soc_reflector/config/: ble_peer_manager_peripheral_config.h  sl_bluetooth_config.h  sl_clock_manager_oscillator_config.h  sl_iostream_eusart_vcom_config.h
bt_cs_soc_reflector/config/btconf/: gatt_configuration.btconf  ras.xml  slc_args.json
